--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	color: #333;
 }
 ol, ul {
 	list-style: none;
@@ -40,4 +41,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+a {
+	text-decoration: none;
 }
