--- a/src/pages/group/index/index.scss
+++ b/src/pages/group/index/index.scss
@@ -1,40 +1,126 @@
-.wrapper-textlist-box {
-    padding: 2rem 3rem 2rem 2rem;
-}
-
-.component-img-list {
+.item-group {
     display: flex;
-    flex-wrap: wrap;
-    .component-img-item {
-        flex: 1 0 auto;
-        margin-bottom: 1rem;
-        box-sizing: cover;
-        .component-img-cover {
-            max-width: 100%;
+    padding: 1.5rem 2rem;
+    &:hover {
+        background-color: #f5faff;
+    }
+    .cover-group {
+        margin-right: 1rem;
+        > img {
+            width: 3.5rem;
+            border-radius: .3rem;
         }
     }
-    
+    .info-group {
+        flex-grow: 1;
+        .text-main {
+            font-size: 1rem;
+            margin-bottom: .5rem;
+        }
+        .text-sub {
+            font-size: .8rem;
+            color: #999;
+        }
+    }
 }
 
-.wrapper-photo {
-    padding: 2rem 3rem;
-    position: relative;
-    img {
-        max-width: 100%;
+.wrapper-groupnews {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    .item-news {
+        display: flex;
+        align-items: flex-end;
+        margin-bottom: 2rem;
     }
-    .header-photo {
-        position: absolute;
-        background-color: #FFF;
-        padding: 1rem;
-        box-shadow: 0 0 3px #ccc;
-        .title {
-            font-size: 1.2rem;
-            line-height: 1.8;
-            margin-bottom: .5rem;
+}
+
+.wrapper-groupnews-top {
+    flex-grow: 1;
+    padding: 2rem 3rem;
+    overflow-y: scroll;
+}
+
+.item-news {
+    &.mine {
+        flex-direction: row-reverse;
+        .cover-news {
+            margin-right: 0;
+            margin-left: 1rem;
+        }     
+        .info-news {
+            .bubble {
+                background-color: #1e64e5;
+                border-radius: 1rem;
+                border-bottom-right-radius: 0;
+                color: #FFF;
+                a {
+                    margin: 0 .5rem;
+                    color: #FFF;
+                    text-decoration: underline;
+                    text-decoration-style: dashed;
+                }
+                .name {
+                    color: #FFF;
+                }
+             }
+             .date {
+                 text-align: right;
+             }
+        }   
+    }
+    .cover-news {
+        margin-right: 1rem;
+        > img {
+            width: 3rem;
+            border-radius: 50%;
+        }
+    }
+    .info-news {
+        .bubble {
+           background-color: #F1F2F6; 
+           border-radius: 1rem;
+           border-bottom-left-radius: 0;
+           padding: 1rem;
+           margin-bottom: .5rem;
+           .name {
+               color: #999;
+               font-size: .8rem;
+               margin-bottom: 1rem;
+           }
         }
         .date {
             color: #999;
-            font-size: .9rem;
+            font-size: .8rem;
         }
     }
+}
+
+.wrapper-msgsend {
+    width: 100%;
+    border-top: 1px solid #eee;
+    background-color: #f9fafa;
+    box-sizing: border-box;
+    padding: .5rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    .input-msg {
+        color: #bec6ce;
+        background-color: #f9fafa;
+        border: none;
+        outline: none;
+        padding: .5rem 0;
+        font-size: 1rem;
+    }
+    .btn-msg {
+        border: 1px solid #eee;
+        background: #FFF;
+        color: #1e64e5;
+        font-size: 1.1rem;
+        width: 3rem;
+        height: 3rem;
+        cursor: pointer;
+    }
+    
 }
