fix components, add pages

--- a/src/layouts/header/header.scss
+++ b/src/layouts/header/header.scss
@@ -20,9 +20,9 @@
     }
     .wrapper-users {
         color: #c4c6cc;
-        .text-name {
-            margin-right: 1rem;
-            font-size: .9rem;
+        font-size: .9rem;
+        svg {
+            margin-left: 1rem;
         }
     }
     .wrapper-tip {
