--- a/src/components/dropdown/index.scss
+++ b/src/components/dropdown/index.scss
@@ -16,13 +16,13 @@
         transform: translateY(100%);
         background: #FFF;
         box-shadow: 0 0 5px #ddd;
-        width: 100%;
         box-sizing: border-box;
         padding: 1rem;
-
         .mck-dropdown-item {
             a {
                 color: #c4c6cc;
+                line-height: 1.8;
+                white-space: nowrap;
                 &:hover {
                     color: #4d7cff;
                 }
