--- a/src/components/dropdown/index.scss
+++ b/src/components/dropdown/index.scss
@@ -13,18 +13,25 @@
         display: none;
         position: absolute;
         bottom: 0;
+        right: 0;
         transform: translateY(100%);
         background: #FFF;
         box-shadow: 0 0 5px #ddd;
         box-sizing: border-box;
-        padding: 1rem;
         .mck-dropdown-item {
+            svg {
+                margin-right: .5rem;
+            }
             a {
+                display: block;
                 color: #c4c6cc;
                 line-height: 1.8;
                 white-space: nowrap;
+                padding: .6rem 1.2rem;
+                font-size: .8rem;
                 &:hover {
                     color: #4d7cff;
+                    background-color: #f5faff;
                 }
             }
         }
