--- a/src/pages/user/info/index.scss
+++ b/src/pages/user/info/index.scss
@@ -54,7 +54,7 @@
 }
 
 
-.wrapper-infos {
+.infos {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -66,7 +66,7 @@
     }
 }
 
-.wrapper-infos-top {
+.infos-top {
     flex-grow: 1;
     padding: 2rem 3rem;
     overflow-y: scroll;
