--- a/src/pages/user/register/index.scss
+++ b/src/pages/user/register/index.scss
@@ -8,7 +8,7 @@
     justify-content: center;
 }
 
-.wrapper-useropt {
+.useropt {
     text-align: center;
     font-weight: 300;
     letter-spacing: .2rem;
@@ -63,7 +63,7 @@
     }
 }
 
-.wrapper-fixed-logo {
+.fixed-logo {
     position: fixed;
     top: 2rem;
     left: 2rem;
