--- a/src/assets/styles/normal.scss
+++ b/src/assets/styles/normal.scss
@@ -20,3 +20,17 @@ textarea {
         padding: 2rem 3rem;
     }
 }
+
+
+.section {
+    padding: 1rem 3rem;
+}
+
+.radius-btn {
+    border-radius: 1rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
