--- a/src/layouts/header/header.scss
+++ b/src/layouts/header/header.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/public.scss';
+
 .public-header {
     padding: 1.5rem 3rem;
     display: flex;
@@ -10,8 +12,9 @@
         font-size: 1.2rem;
         margin: 0 2rem 0 0;
         line-height: 2rem;
+        @extend .transition;
         &:hover {
-            color: #4d7cff;
+            color: $purple;
         }
     }
     .header-avatar {
