--- a/src/components/dropdown/index.scss
+++ b/src/components/dropdown/index.scss
@@ -1,3 +1,4 @@
+$mainColor: #632df8;
 .mck-dropdown {
     position: relative;
     cursor: pointer;
@@ -18,6 +19,7 @@
         background: #FFF;
         box-shadow: 0 0 5px #ddd;
         box-sizing: border-box;
+        border-radius: .5rem;
         .mck-dropdown-item {
             svg {
                 margin-right: .5rem;
@@ -29,8 +31,9 @@
                 white-space: nowrap;
                 padding: .6rem 1.2rem;
                 font-size: .8rem;
+                transition: all .2s;
                 &:hover {
-                    color: #4d7cff;
+                    color: $mainColor;
                     background-color: #f5faff;
                 }
             }
