--- a/src/pages/setting/index/index.scss
+++ b/src/pages/setting/index/index.scss
@@ -82,6 +82,7 @@
         justify-content: space-between;
         .input-pure-text {
             margin-bottom: .5rem;
+            font-size: .9rem;
         }
     }
 }
